# Swarm_Quad-Gazebo_CamSIM_AI-PLM_Completed

./: ARCHITECTURE_DESIGN_DOCUMENT.md  FINAL_PROJECT_COMPLETION.md  PROGRESS_SUMMARY_STAGES_1_5.md  PROJECT_PROGRESS_SUMMARY.md  PROJECT_STATUS_AND_PLAN_$(date +%Y%m%d_%H%M%S).md  PROJECT_STATUS_AND_PLAN_20250803_193341.md  README.md
stages/s10_advanced_slam/: test_advanced_slam.py  validate_advanced_slam.py
stages/s10_advanced_slam/scripts/: advanced_slam_engine.py
stages/s10_advanced_slam/src/advanced_slam/: CMakeLists.txt  package.xml
stages/s10_sensor_failure_robustness/: README.md
stages/s11_edge_deployment/: README.md
stages/s11_realtime_ai_integration/: test_realtime_ai_integration.py  validate_realtime_ai_integration.py
stages/s11_realtime_ai_integration/scripts/: realtime_ai_integration.py
stages/s11_realtime_ai_integration/src/realtime_ai/: CMakeLists.txt  package.xml
stages/s12_mission_planning_execution/: test_mission_planning.py  validate_mission_planning.py
stages/s12_mission_planning_execution/src/mission_planning/: CMakeLists.txt  package.xml  setup.py
stages/s12_search_rescue_mission/: README.md
stages/s13_performance_optimization/scripts/: performance_optimizer.py
stages/s13_swarm_system/: README.md
stages/s14_full_system_integration/: Dockerfile  deploy_and_test.sh  docker-compose.yml  test_complete_system.py
stages/s14_full_system_integration/launch/: complete_system.launch.py
stages/s14_swarm_ai_algorithm/: README.md
stages/s1_quadcopter_simulation/: Dockerfile  README.md  STAGE1_SUMMARY.md  docker-compose.yml
stages/s1_quadcopter_simulation/config/: controller_params.yaml
stages/s1_quadcopter_simulation/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
stages/s1_quadcopter_simulation/launch/: controller.launch.py  simulation.launch.py
stages/s1_quadcopter_simulation/log/: latest_build
stages/s1_quadcopter_simulation/scripts/: launch_simulation.sh  test_flight.sh
stages/s1_quadcopter_simulation/src/quadcopter_controller/: CMakeLists.txt  package.xml
stages/s1_quadcopter_simulation/src/quadcopter_controller/quadcopter_controller/: __init__.py  flight_controller.py  setup.py
stages/s1_quadcopter_simulation/src/quadcopter_controller/resource/: quadcopter_controller
stages/s1_quadcopter_simulation/tests/: test_integration.py  test_physics.py
stages/s1_quadcopter_simulation/worlds/: empty_world.world
stages/s2_3d_map_creation/: Dockerfile  README.md  docker-compose.yml  test_hospital_world.py  test_world_validation.py
stages/s2_3d_map_creation/launch/: hospital_test.launch.py
stages/s2_3d_map_creation/worlds/: hospital.world  office_building.world
stages/s3_sensor_simulation/: README.md  test_sensor_integration.py  validate_sensor_simulation.py
stages/s3_sensor_simulation/src/sensor_simulator/: CMakeLists.txt  package.xml
stages/s3_sensor_simulation/src/sensor_simulator/sensor_simulator/: camera_simulator.py  lidar_simulator.py
stages/s4_slam_engine/: README.md  test_slam_integration.py  validate_slam_engine.py
stages/s4_slam_engine/src/slam_engine/: CMakeLists.txt  package.xml
stages/s4_slam_engine/src/slam_engine/slam_engine/: visual_slam.py
stages/s5_perception_plm/: README.md  test_perception_plm.py  validate_perception_plm.py
stages/s6_llm_decision_engine/: README.md  test_llm_decision_engine.py  validate_llm_decision_engine.py
stages/s6_llm_decision_engine/scripts/: decision_engine.py
stages/s7_navigation_control/: README.md
stages/s7_navigation_control_loop/: test_navigation_control.py  validate_navigation_control.py
stages/s7_navigation_control_loop/scripts/: navigation_controller.py
stages/s8_swarm_coordination/: test_swarm_coordination.py  validate_swarm_coordination.py
stages/s8_visual_prompt_system/: README.md
stages/s9_multi_sensor_fusion/: test_sensor_fusion.py  validate_sensor_fusion.py
stages/s9_multi_sensor_fusion/scripts/: sensor_fusion_engine.py
stages/s9_sensor_simulation_full/: README.md
(+28 files in other folders)
